# token-saving

./: .gitignore  CLAUDE.md  README.md  audit_compression.py  install.py  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
claude/: hook_pretool.py  plugin.json  wrap.py
commands/: token-saver-stats.md
docs/: comparison.md
docs/processors/: ansible.md  build_output.md  cargo.md  cargo_clippy.md  cloud_cli.md  db_query.md  docker.md  env.md  file_content.md  file_listing.md  generic.md  gh.md  git.md  go.md  helm.md  jq_yq.md  kubectl.md  lint_output.md  maven_gradle.md  network.md  package_list.md  python_install.md  search.md  ssh.md  structured_log.md  syslog.md  system_info.md  terraform.md  test_output.md
examples/: README.md  demo.py
examples/custom_processor/: README.md  ansible_output.py
examples/fixtures/: kubectl_pods.txt  large_git_diff.txt  npm_install.txt  pytest_output.txt  terraform_plan.txt
gemini/: hook_aftertool.py  hooks.json
hooks/: hooks.json
installers/: claude.py  common.py  gemini.py
scripts/: generate_demo.py  hook_pretool.py  hook_session.py  wrap.py
skills/token-saver-config/: SKILL.md
src/: __init__.py  chain_utils.py  cli.py  config.py  engine.py  hook_session.py  platforms.py  stats.py  tracker.py  version_check.py
src/processors/: __init__.py  ansible.py  base.py  build_output.py  cargo.py  cargo_clippy.py  cloud_cli.py  db_query.py  docker.py  env.py  file_content.py  file_listing.py  generic.py  gh.py  git.py  go.py  helm.py  jq_yq.py  kubectl.py  lint_output.py  maven_gradle.py  network.py  python_install.py  search.py  ssh.py  structured_log.py  syslog.py  system_info.py  terraform.py  test_output.py  utils.py
tests/: test_cli.py  test_config.py  test_engine.py  test_hooks.py  test_installers.py  test_precision.py  test_processors.py  test_tracker.py  test_user_processors.py  test_version_check.py
